--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,11 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "^3.3.6"
+    "bootstrap": "^3.3.6",
+    "requirejs": "^2.1.22",
+    "backbone": "^1.2.3",
+    "mustache.js": "mustache#^2.2.1",
+    "normalize-css": "normalize.css#^3.0.3",
+    "text": "requirejs-text#^2.0.14"
   }
 }
